fix: reduce amount of input fields

--- a/src/admin/includes/css/grandeljaydhlexpress.css
+++ b/src/admin/includes/css/grandeljaydhlexpress.css
@@ -33,6 +33,12 @@ input {
     width: 100%;
 }
 
+.modulbox .infoBoxContent textarea {
+    height: 12em;
+
+    resize: vertical;
+}
+
 /**
  * Button
  */
