feat: add field descriptions to weight

--- a/src/admin/includes/css/grandeljaydhlexpress.css
+++ b/src/admin/includes/css/grandeljaydhlexpress.css
@@ -164,3 +164,11 @@ details > summary > h6 {
 details > div {
     padding: 10px;
 }
+
+details > div > :first-child {
+    margin-top: 0;
+}
+
+details > div > :last-child {
+    margin-bottom: 0;
+}
