--- a/src/admin/includes/css/grandeljaydhlexpress.css
+++ b/src/admin/includes/css/grandeljaydhlexpress.css
@@ -13,7 +13,8 @@ input {
 }
 
 .modulbox .infoBoxContent input[type="text"],
-.modulbox .infoBoxContent input[type="number"] {
+.modulbox .infoBoxContent input[type="number"],
+.modulbox .infoBoxContent input[type="date"] {
     width: 100%;
     padding: 6px 4px;
 
@@ -29,8 +30,14 @@ input {
 
 .modulbox .infoBoxContent input[type="text"],
 .modulbox .infoBoxContent input[type="number"],
+.modulbox .infoBoxContent input[type="date"],
+.modulbox .infoBoxContent select,
 .modulbox .infoBoxContent textarea {
     width: 100%;
+}
+
+.modulbox .infoBoxContent select {
+    padding: 6px 4px;
 }
 
 .modulbox .infoBoxContent textarea {
