--- a/src/admin/includes/css/grandeljay_dhl_express.css
+++ b/src/admin/includes/css/grandeljay_dhl_express.css
@@ -53,6 +53,10 @@ input {
     background-color: #f0f0f0;
 }
 
+.modulbox .infoBoxContent [data-name="countries"] {
+    margin-bottom: 1rem;
+}
+
 /**
  * Button
  */
